animation finished, without adjustment. inapplicability

--- a/homePage.html
+++ b/homePage.html
@@ -30,15 +30,25 @@
 		</li>
 	</ul>
 	<!--side bar-->
-	<ul class="sideBar">
+	<!-- <ul class="sideBar">
 		<li><a class="sideBarIcon" href="#firstPart"><img  src="img/home.png"></a></li>
 		<li><a class="sideBarIcon" href="#secondPart"><img  src="img/photo.png"></a></li>
 		<li><a class="sideBarIcon" href="#thirdPart"><img  src="img/code.png"></a></li>
 		<li><a class="sideBarIcon" href="#forthPart"><img  src="img/experience.png"></a></li>
-		
 	</ul>
+ -->
+ 	<div class="sideBar">
+		<input type="radio" name="radio-set" id="sideBarButtom1" checked="checked">
+		<a class="sideBarIcon" href="#firstPart"><img  src="img/home.png"></a>
+		<input type="radio" name="radio-set" id="sideBarButtom2">
+		<a class="sideBarIcon" href="#secondPart"><img  src="img/photo.png"></a>
+		<input type="radio" name="radio-set" id="sideBarButtom3">
+		<a class="sideBarIcon" href="#thirdPart"><img  src="img/code.png"></a>
+		<input type="radio" name="radio-set" id="sideBarButtom4">
+		<a class="sideBarIcon" href="#forthPart"><img  src="img/experience.png"></a>
+	</div>
 
-
+	<!-- content begin -->
 
 
 
