Finished all function. Code is waiting for optimization.

--- a/homePage.html
+++ b/homePage.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<!--force the browser to follow the latest standards to render the page-->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 	<title>Chaos' Web Page</title>
 	<link rel="stylesheet" type="text/css" href="homeStyle.css">
@@ -12,7 +12,7 @@
 	<!--topNavBar-->
 	<ul class="topNavBar" id="top">
 		<li>
-			<a id="ProfilePhoto" href="information.htlm">
+			<a id="ProfilePhoto" href="information.html">
 				<img src="img/ProfilePhoto.jpg" alt="Profile Photo">
 			</a>
 		</li>
@@ -52,14 +52,19 @@
 			</ul>
 		</li>
 	</ul> -->
-		<!-- <input type="radio" name="radio-set" id="sideBarButtom1" checked="checked"> -->
-		<a class="sideBarIcon" id="sideBarButtom1" href="#top"><img  src="img/backTop.png"></a>
+		
 		<!-- <input type="radio" name="radio-set" id="sideBarButtom2"> -->
-		<a class="sideBarIcon" id="sideBarButtom2" href="#secondPart"><img  src="img/information.png"></a>
+		<a class="sideBarIcon" id="sideBarButtom1" href="#secondPart">
+		<img  src="img/information.png" alt="Information Icon"></a>
 		<!-- <input type="radio" name="radio-set" id="sideBarButtom3"> -->
-		<a class="sideBarIcon" id="sideBarButtom3" href="#thirdPart"><img  src="img/travel.png"></a>
+		<a class="sideBarIcon" id="sideBarButtom2" href="#thirdPart">
+		<img  src="img/travel.png" alt="Travel Icon"></a>
 		<!-- <input type="radio" name="radio-set" id="sideBarButtom4"> -->
-		<a class="sideBarIcon" id="sideBarButtom4" href="#forthPart"><img  src="img/hobby.png"></a>
+		<a class="sideBarIcon" id="sideBarButtom3" href="#forthPart">
+		<img  src="img/hobby.png" alt="Hobby Icon"></a>
+		<!-- <input type="radio" name="radio-set" id="sideBarButtom1" checked="checked"> -->
+		<a class="sideBarIcon" id="sideBarButtom4" href="#top">
+		<img  src="img/backTop.png" alt="Back to top Icon"></a>
 	</div>
 	<!-- content begin -->
 		<div class="mainContent">
@@ -83,7 +88,7 @@
 		</div>
 	<address>
 		<p>Made 27 March 2017 <br> by <strong>Chaos</strong></p>
-		<a href="http://www.xjtlu.edu.cn"><img src="img/logo.png"></a>
+		<a href="http://www.xjtlu.edu.cn"><img src="img/logo.png" alt="XJTLU logo"></a>
 	</address>
 
 </body>
