delete useless comment, adjust to compatible with safari.

--- a/information.html
+++ b/information.html
@@ -1,3 +1,7 @@
+<!-- File name: information.html -->
+<!-- Author: CHAOS -->
+<!-- 2017/3/28 -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,21 +26,21 @@
 		</li>
 		<li class="mainNavBar">
 			<ul class="navBottum">
-				<li><a href="homePage.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="hobbies.html">Hobbies</a></li>
 				<li><a href="travel.html">Travel</a></li>
 				<li><a href="information.html">Information</a></li>
 			</ul>
 		</li>
 	</ul>
-
-
+	<!-- main part -->
 	<div class="mainParts" id="informationMain">
 		<div class="tableContainer">
 			<div class="headtitle">
 				<h1>Information</h1>
 			</div>
 			<div class="inforTable">
+				<!-- table is used here -->
 				<table>
 					<tr>
 						<th rowspan="4">Photo</th>
@@ -54,16 +58,18 @@
 					</tr>
 					<tr>
 						<th>Github</th>
-						<td>https://github.com/ChaosElephent</td>
+						<td><a href="https://github.com/ChaosElephent">https://github.com/ChaosElephent</a></td>
 					</tr>
 					<tr>
 						<th>Profile</th>
 						<td id="profile" colspan="3">Chaos (of course the nick name) is a university student of Year 2, who is major in <a href="http://www.xjtlu.edu.cn/en/departments/academic-departments/computer-science-and-software-engineering/">Compute Science</a>. Currently he is studying in the <a href="http://www.xjtlu.edu.cn/">Xi'an JiaoTong Liverpool University</a>. He is studying in China and will complete bachelor's degree in <a href="https://www.liverpool.ac.uk/">University of Liverpool</a>.  </td>
-						
+					</tr>
 				</table>
 			</div>
 		</div>
 	</div>
+
+	<!-- bottom bar -->
 	<address>
 		<p>Made 27 March 2017 <br> by <strong>Chaos</strong></p>
 		<a href="http://www.xjtlu.edu.cn"><img src="img/logo.png" alt="XJTLU logo"></a>
@@ -71,3 +77,5 @@
 
 </body>
 </html>
+
+<!-- information.html end -->
