--- a/hobbies.html
+++ b/hobbies.html
@@ -1,3 +1,7 @@
+<!-- File name: hobbies.html -->
+<!-- Author: CHAOS -->
+<!-- 2017/3/28 -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,6 +14,7 @@
 </head>
 <body>
 	<!--topNavBar-->
+	<!-- List is used here -->
 	<ul class="topNavBar" id="top">
 		<li>
 			<a id="ProfilePhoto" href="information.html">
@@ -22,18 +27,23 @@
 		</li>
 		<li class="mainNavBar">
 			<ul class="navBottum">
-				<li><a href="homePage.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="hobbies.html">Hobbies</a></li>
 				<li><a href="travel.html">Travel</a></li>
 				<li><a href="information.html">Information</a></li>
 			</ul>
 		</li>
 	</ul>
+
+
+	<!-- main part  -->
 	<div class="mainParts" id="hobbiesMain">
 		<div class="headtitle">
 			<h1>Hobbies</h1>
 		</div>
+
 		<div class="articalContainer">
+
 			<div id="hobbyPart1">
 				<div class="hobbyImg">
 					<img src="img/hobby1.jpg" alt="First hobby: Sports">
@@ -43,6 +53,7 @@
 					<p>I <a href="https://en.wikipedia.org/wiki/Jogging">jog</a> every day to keep fit. And it also give me a keen mind.</p>
 				</div>
 			</div>
+
 			<div id="hobbyPart2">
 				<div class="hobbyText">
 					<h2>Movie</h2>
@@ -53,7 +64,6 @@
 				</div>
 			</div>
 
-
 			<div id="hobbyPart3">
 				<div class="hobbyImg">
 					<img src="img/hobby3.jpg" alt="Third hobby: Video Game">
@@ -63,10 +73,10 @@
 					<p>Also I play video Game when I feel stressful. Here are my favorite video Game <a href="https://en.wikipedia.org/wiki/Assassin%27s_Creed">ASSASSIN'S CREED</a></p>
 				</div>
 			</div>
-				
-
 		</div>
 	</div>
+
+	<!-- bottom bar -->
 	<address>
 		<p>Made 27 March 2017 <br> by <strong>Chaos</strong></p>
 		<a href="http://www.xjtlu.edu.cn"><img src="img/logo.png" alt="XJTLU logo"></a>
@@ -74,3 +84,5 @@
 
 </body>
 </html>
+
+<!-- hobbies.html end -->
