--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</li>
 		<li class=vertical>
 			<div id="barName">Chaos</div>
-			<div id="barWords">A university student who major in CS</div>
+			<div id="barWords">A university student who majors in CS</div>
 		</li>
 		<li class="mainNavBar">
 			<ul class="navBottum">
